# mulle-dlmalloc

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-project.sh
.mulle/etc/project/: version-info.sh
assets/dox/: TOC.md
cmake/reflect/: _Sources.cmake
cola/: changes.md.bud  description.md.bud  properties.plist
src/: dlmalloc.c
